syntax = "proto3";

package qianxia.IMChat;

option go_package = "IMChat/pb";

import "message.proto";

service MessageService {

    rpc SenderMessage(stream SenderMessageRequest) returns (stream SenderMessageResponse) {}

    rpc ReceiverMessage(stream SenderMessageResponse) returns (stream ReceiverMessageRequest) {}

}

message SenderMessageRequest {
    int32 sender_id = 1;   //  发送者Id
    int32 receive_id = 2;   // 接收者Id
    int32 message_type = 3; // 消息类型
    string content = 4;   // 发送的内容
    SendType send_type = 5;    // 发送类型
}

message SenderMessageResponse {
    Message message = 1;
}

message ReceiverMessageRequest {
    int32 sender_id = 1;
    int32 receive_id = 2;
    string content = 3;
    // google.protobuf.Timestamp sender_time = 4;
}